Changed color palette, added assets, rearranged homepage layout

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
         theme: {
           extend: {
             colors: {
-              primary: "#26268c",
-              secondary: "#4462d8",
-              "text-primary": "#1a1a50",
-              "text-secondary": "#26268c",
+              primary: "#1C41E6",
+              secondary: "#161630",
+              accent: "#00e7f5",
+              "text-primary": "#161630",
+              "text-secondary": "#1C41E6",
               "muted-primary": "#434363",
               "bg-primary": "#fcfdff",
-              "bg-secondary": "#ecf1fd",
+              "bg-secondary": "#EAEDF5",
+            },
+            backgroundImage: {
+              "gradient-radial":
+                "radial-gradient(circle at center, var(--tw-gradient-stops))",
             },
           },
         },
