--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             colors: {
               primary: "#1C41E6",
               secondary: "#161630",
-              accent: "#00e7f5",
+              accent: "#33A7E9",
               "text-primary": "#161630",
               "text-secondary": "#1C41E6",
               "muted-primary": "#434363",
