--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         },
       };
     </script>
+    <!-- TrustBox script -->
+    <script
+      type="text/javascript"
+      src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js"
+      async
+    ></script>
     <link rel="stylesheet" href="/src/App.css" />
     <title>Faster.com.au | Fast, Flexible Line of Credit in Australia</title>
   </head>
