--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       async
     ></script>
     <link rel="stylesheet" href="/src/App.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/pmt0bam.css" />
     <title>Faster.com.au | Fast, Flexible Line of Credit in Australia</title>
   </head>
   <body>
