Fixed other pages' responsiveness

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             },
           },
         },
+        future: {
+          hoverOnlyWhenSupported: true,
+        },
       };
     </script>
     <!-- TrustBox script -->
