Updated calculator formula and SEO optimisation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     ></script>
     <link rel="stylesheet" href="https://use.typekit.net/pmt0bam.css" />
     <title>Faster.com.au | Fast, Flexible Line of Credit in Australia</title>
+    <meta
+      name="description"
+      content="Faster.com.au is your go-to fast, flexible Line-of-Credit in Australia"
+    />
   </head>
   <body>
     <div id="root"></div>
