Updated live chat component to Faster

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       async
     ></script>
     <link rel="stylesheet" href="https://use.typekit.net/pmt0bam.css" />
+    <!-- Tidio script -->
+    <script
+      src="//code.tidio.co/wapkrv0v3faazxmbosbfby29aapbklua.js"
+      async
+    ></script>
     <title>Faster.com.au | Fast, Flexible Line of Credit in Australia</title>
     <meta
       name="description"
