--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/lettermark.svg" />
+    <link rel="icon" sizes="512x512" type="image/png" href="src/assets/lettermark-512.png" />
+    <link rel="icon" sizes="48x48" type="image/png" href="src/assets/lettermark-48.png" />
+    <link rel="icon" sizes="32x32" type="image/png" href="src/assets/lettermark-32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TrustBox script -->
     <script
